--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,6 @@ code {
 
   display: flex;
   flex-direction: column;
+  margin-top: 5rem;
   align-items: flex-end;
 }
